fixed page-not-found, fixed css class (it causes invisible h2 labels on support page)

--- a/src/main/resources/public/css/custom.css
+++ b/src/main/resources/public/css/custom.css
@@ -132,7 +132,7 @@ h4 {font-size: 0.5rem;}
     background-color:#0C4D48!important;
     color:white;
 }
-.bg-darkgreen h1,h2{
+.bg-darkgreen h1,.bg-darkgreen h2{
     padding:1rem;
     color:white;
     margin:0;
